--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/attachment-metas.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/attachment-metas.tml
@@ -63,6 +63,7 @@
 		<div class="poster">
 			<tml:script>
 				_url = _Attachment.getThumbnailURL({width:200,checksum:true})
+				console.log("_url", _url);
 				var ssc = WGA.service(Packages.de.innovationgate.wgpublisher.webtml.utils.SrcSetCreator);
 				if(_file_md && ssc.getMaxAvailablePosterSize){
 					var fileOriginalSize = ssc.getMaxAvailablePosterSize(content(), _file_md);
@@ -71,9 +72,11 @@
 					}
 				}
 			</tml:script>
-			<img src="<tml:item name="_url"/>" srcset="<tml:item name="_srcset"/>" title="<tml:script expression="_file_md.mimeType"/>">
+			<tml:case condition="_url">
+				<img src="<tml:item name="_url"/>" srcset="<tml:item name="_srcset"/>" title="<tml:script expression="_file_md.mimeType"/>">
+			</tml:case>
 			<div class="info">
-				<tml:script expression="_file_md.mimeType"/>
+				<tml:label key="[filetype.single.{_Attachment.getType().name}]"/>
 				-
 				<tml:script expression="AFW.Util.renderFileSize(_file_md.size)"/>
 				<tml:case condition="_file_md && _file_md.displayWidth>0">
