--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -309,3 +309,28 @@
 	width: 800px;
 	margin-left: -400px;
 }
+
+form .select-tree{
+
+	position: relative;
+	
+	.tree{
+		display: none;
+		
+		max-height: 250px;
+		width: 100%;
+		background: white;
+		padding: 5px 0;
+		margin-top: 5px;
+		border: solid silver 1px;
+		overflow: auto;
+
+		.area{
+			margin: 5px;
+			padding: 5px 0;
+			border: solid silver 1px;
+			border-radius: 4px;
+		}
+
+	}
+}
