#00005273: content module "collection/subpages": images are not rendered; #entries may be ignored

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/children.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/children.tml
@@ -34,10 +34,11 @@
 
 	_headings = CMM.setting("news_heading") || "h1"
 	_top_news = CMM.setting('top_news');
+	_entries = CMM.setting('entries');
 </tml:script>
 <tml:case context="{_context}" iscontextvalid="true">
 	<tml:children id="{scoped:child-collection}" exclude="main"/>
 	<div class="<tml:item name="{scoped:class}"/> <tml:[setting] o_name="layout"/>">
-		<tml:include ref="[::layout:{_layout}]" o-offset="_offset" o-news_headings="_headings" o-top_news="_top_news"/>
+		<tml:include ref="[::layout:{_layout}]" o-offset="_offset" o-news_headings="_headings" o-top_news="_top_news" o-entries="_entries"/>
 	</div>
 </tml:case>
