#00005276: Updated fontawesome to version 5.3 to get more Icons

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/styles.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/styles.scss
@@ -10,8 +10,8 @@ $fa-font-path: wga_file_url("fa5", "webfonts");
 @import "type=file /fa5/scss/variables";
 @import "type=file /fa5/scss/mixins";
 @import "type=file /fa5/scss/core";
-@import "type=file /fa5/scss/fa-solid";
-@import "type=file /fa5/scss/fa-regular";
+@import "type=file /fa5/scss/solid";
+@import "type=file /fa5/scss/regular";
 @import "type=file /fa5/scss/icons";
 @import "type=file /fa5/scss/rotated-flipped";
 
