added encode=none to parent-title

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/child.tml
@@ -31,7 +31,7 @@
 
 		<tml:[::form]/>
 		<tml:[form-field] o_label="Erstellen unter" o_mode="view">
-			<tml:script>
+			<tml:script encode="html">
 				var c = context("docid:"+document.getStructKey(), false)
 				if(c)
 					return c.TITLE;
