show file type instead of mimetype

--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/file-info.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/file-info.tml
@@ -3,7 +3,9 @@
 <tml:script>
 	if($option_filename){
 		var file = content().getFileMetaData($option_filename);
-		_url = AFW.content().attachment($option_filename).getThumbnailURL()
+		var attachment = AFW.content().attachment($option_filename);
+		_url = attachment.getThumbnailURL();
+		_type = WGA.design().label("filetype.single."+attachment.getType().name);
 		_size = AFW.Util.renderFileSize(file.getSize());
 		_date = file.getLastmodified()
 		_mimetype = file.getMimeType()					
@@ -11,10 +13,10 @@
 </tml:script>
 <tml:{div} if="_url" html_class="clearfix">
 	<div style="float:left;width:60px;margin-top:5px">
-		<img style="max-width:60px;max-height:40px" src="@{_url}">
+		<img style="max-width:60px;max-height:40px" src="@{_url}" title="@{_mimetype}">
 	</div>
 	<div style="margin-left:70px">
-		@{_mimetype} - @{_size encode="none"}
+		@{_type} - @{_size encode="none"}
 		<br>
 		@{_date}
 	</div>					
