hide empty select options via css

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/dialog.scss
@@ -308,6 +308,10 @@
 #dialog-edit-html, #dialog-edit-rtf-link, #dialog-edit-rtf-image {
 	width: 800px;
 	margin-left: -400px;
+	
+	option[value=""]{  
+	    display: none;
+	}
 }
 
 form .select-tree{
