#00005270: role="none" in <tml:path>

--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
@@ -18,7 +18,7 @@
 						path.push("area-"+struct.getArea().getName());
 						_path = path.reverse().join("/");
 					</tml:script>
-					<tml:path>
+					<tml:path role="none">
 						<tml:meta name="title"/>
 						<tml:between> / </tml:between>
 					</tml:path>
